# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-398e5d7ad3e7f7e0fa8d8ca37f2b7cff7513fb3d4faa79304e103e887eb6fcff.json  query-4e51abb5a83fc23d72697a7b4c61af0b090a506eec1d475db4d37b926942d01b.json  query-56c7fde34fa1a4330c12877854206afd70c698e285586d1306ea9d62f8d3c018.json  query-57a1be7b14d0efbdabcb6fa5a1d7d6bb3ac080e92f5d66763695d4bcdf83a582.json
configuration/: base.yaml  production.yaml
migrations/: 20230906044223_create_subscription_tokens_table.sql  20231003051504_create_users_table.sql  20231004045914_add_salt_to_users.sql  20231004052412_remove_salt_from_users.sql  20231014070352_seed_user.sql  20231017192326_create_idempotency_table.sql  20231021055011_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+2 files in other folders)
